@startuml
state OPENING {
[*] --> ALLOCATING
ALLOCATING --> BINDING : allocated
BINDING --> OPENED : bound
OPENED --> [*]
}

state NEGOTIATING {
[*] --> NEGOTIATING_FORMATS
NEGOTIATING_FORMATS --> CONNECTING : negotiated_formats
CONNECTING --> NEGOTIATED : connected
NEGOTIATED --> [*]
}

state CLOSING {
[*] --> DEACTIVATING
DEACTIVATING --> DEALLOCATING : deactivated
DEALLOCATING --> DEALLOCATED : deallocated
DEALLOCATED --> [*]
}

[*] --> IDLE
IDLE --> OPENING : open
IDLE --> CLOSED : close

OPENING --> OPEN : opened
OPENING --> CLOSING : close

OPEN --> NEGOTIATING : negotiate
OPEN --> OPEN : update_mode
OPEN --> CLOSING : close

NEGOTIATING --> ESTABLISHED : negotiated
NEGOTIATING -> NEGOTIATION_FAILED : unsupported_formats
NEGOTIATING -> NEGOTIATION_FAILED : connect_failure
NEGOTIATING --> CLOSING : close

NEGOTIATION_FAILED --> CLOSING : close

ESTABLISHED --> NEGOTIATING : negotiate
ESTABLISHED --> ESTABLISHED : update_mode
ESTABLISHED --> CLOSING : close

CLOSING --> CLOSED : closed

CLOSED --> [*]
@enduml